--- a/EventReminderApp2/CSS/Home.css
+++ b/EventReminderApp2/CSS/Home.css
@@ -47,3 +47,12 @@
     float: right;
     margin-right:20px;
 }
+
+/*#backgroundImg {
+    width:100%;
+    height:700px;
+    background-image: url('calenderIMG.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%;
+}*/
