--- a/EventReminderApp2/Views/User/UserHome.cshtml
+++ b/EventReminderApp2/Views/User/UserHome.cshtml
@@ -22,234 +22,24 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/css/tempusdominus-bootstrap-4.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.js" integrity="sha256-2JRzNxMJiS0aHOJjG+liqsEOuBb6++9cY4dSOyiijX4=" crossorigin="anonymous"></script>
 
+    <script src="~/Scripts/UserHome.js"></script>
     <link href="~/CSS/Home.css" rel="stylesheet" />
     <link href="~/CSS/NavTabss.css" rel="stylesheet" />
     <script src="~/Scripts/LoginReg.js"></script>
     <link href="~/CSS/LoginReg.css" rel="stylesheet" />
     <script src="~/Scripts/RegFormValidate.js"></script>
 
+
     @*//calender*@
     <link href="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.4.0/fullcalendar.min.css" rel="stylesheet" />
     <link href="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.4.0/fullcalendar.print.css" rel="stylesheet" media="print" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.4.0/fullcalendar.min.js"></script>
-   
+
     @*<link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />*@
 
     <script>
-        $(document).ready(function () {
-
-            
-            ////login////
-            $('#btnSignInSignUp').click(function () {
-                //Open modal dialog for signin/signup
-                $('#ModalSignInSignUp').modal();
-            })
-
-            $('#btnLogin').click(function () {
-                var data = {
-                    UserName: $('#inputUsername').val(),
-                    Password: $('#inputPassword').val()
-                }
-                Login(data);
-            });
-
-            function Login(loginData) {
-                $.ajax({
-                    type: "POST",
-                    url: '/User/SignIn',
-                    data: loginData,
-                    success: function (data) {
-                        if (data.status) {
-                            //Refresh the calender
-                            FetchEventAndRenderCalendar();                            
-                            $('#ModalSignInSignUp').modal('hide');
-
-                        }
-                    },
-                    error: function () {
-                        alert('Failed');
-                    }
-                })
-            }
-
-            
-
-            ///register///
-            $('#btn-SignUp').click(function () {
-                var RegData = {
-                    UserName: $('#user-name').val(),
-                    Email: $('#user-email').val(),
-                    Password: $('#user-pass').val()
-                }
-                Register(RegData);
-            })
-
-            function Register(data) {
-                $.ajax({
-                    type: "POST",
-                    url: '/User/SignUp',
-                    data: data,
-                    success: function (data) {
-                        if (data.status) {
-                            //Refresh the calender
-                            // FetchEventAndRenderCalendar();
-                           $('#ModalSignInSignUp').modal();
-                        }
-                    },
-                    error: function () {
-                        alert('Failed');
-                    }
-                })
-            }
-
-
-
-
-            ///calnder///
-            var events = [];
-            var selectedEvent = null;
-            //FetchEventAndRenderCalendar();
-            function FetchEventAndRenderCalendar() {
-                
-                events = [];
-                $.ajax({
-                    type: "GET",
-                    url: "/User/GetEvents",
-                    success: function (data) {
-                        $.each(data, function (i, v) {
-                            events.push({
-                                eventID: v.EventId,
-                                title: v.EventName,
-                                description: v.Description,
-                                start: moment(v.StartDate),
-                                end: v.EndDate != null ? moment(v.EndDate) : null
-                            });
-                        })
-
-                        GenerateCalender(events);
-                    },
-                    error: function (error) {
-                        alert('failed');
-                    }
-                })
-            }
-
-
-
-
-            function GenerateCalender(events) {
-                $('#calender').fullCalendar('destroy');
-                $('#calender').fullCalendar({
-                    contentHeight: 400,
-                    defaultDate: new Date(),
-                    timeFormat: 'h(:mm)a',
-                    header: {
-                        left: 'prev,next today',
-                        center: 'title',
-                        right: 'month,basicWeek,basicDay,agenda'
-                    },
-                    eventLimit: true,
-                    eventColor: 'orange',
-                    events: events,
-                    eventClick: function (calEvent, jsEvent, view) {
-                        selectedEvent = calEvent;
-                        $('#myModal #eventTitle').text(calEvent.title);
-                        var $description = $('<div/>');
-                        $description.append($('<p/>').html('<b>Start:</b>' + calEvent.start.format("DD-MMM-YYYY HH:mm a")));
-                        if (calEvent.end != null) {
-                            $description.append($('<p/>').html('<b>End:</b>' + calEvent.end.format("DD-MMM-YYYY HH:mm a")));
-                        }
-                        $description.append($('<p/>').html('<b>Description:</b>' + calEvent.description));
-                        $('#myModal #pDetails').empty().html($description);
-
-                        $('#myModal').modal();
-                    },
-                    selectable: true,
-                    select: function (start, end) {
-                        selectedEvent = {
-                            eventID: 0,
-                            title: '',
-                            description: '',
-                            start: start,
-                            end: end
-                        };
-                        openAddEditForm();
-                        $('#calendar').fullCalendar('unselect');
-                    },
-                    editable: true,
-                    eventDrop: function (event) {
-                        var data = {
-                            EventId: event.eventID,
-                            EventName: event.title,
-                            StartDate: event.start.format('YYYY/MM/DD HH:mm A'),
-                            EndDate: event.end != null ? event.end.format('YYYY/MM/DD HH:mm A') : null,
-                            Description: event.description
-                        };
-                        SaveEvent(data);
-                    }
-
-                })
-            }
-
-
-
-
-
-            ////create event////       
-            $('#btnSubmitCreate').click(function () {
-                //Validation/
-                if ($('#EventName').val().trim() == "") {
-                    alert('EventName is required');
-                    return;
-                }
-                if ($('#StartDate').val().trim() == "") {
-                    alert('Start date required');
-                    return;
-                }
-
-                else {
-                    var startDate = moment($('#StartDate').val(), "DD/MM/YYYY HH:mm A").toDate();
-                    var endDate = moment($('#EndDate').val(), "DD/MM/YYYY HH:mm A").toDate();
-                    if (startDate > endDate) {
-                        alert('Invalid end date');
-                        return;
-                    }
-                }
-                var data = {
-                    EventId: $('#EventID').val(),
-                    EventName: $('#EventName').val().trim(),
-                    Description: $('#Description').val(),
-                    StartDate: $('#StartDate').val().trim(),
-                    EndDate: $('#EndDate').val().trim()
-                }
-                SaveEvent(data);
-            })
-
-
-
-            function SaveEvent(data) {
-                $.ajax({
-                    type: "POST",
-                    url: '/Account/SaveEvent',
-                    data: data,
-                    success: function (data) {
-                        if (data.status) {
-                            //Refresh the calender
-                            FetchEventAndRenderCalendar();
-                            $('#myModalSave').modal('hide');
-                        }
-                    },
-                    error: function () {
-                        alert('Failed');
-                    }
-                })
-            }
-
-
-
-        })@*//document.ready*@        
-
+       
     </script>
 
 </head>
@@ -260,43 +50,48 @@
         </div>
         <div class="btnContainer">
             <button id="btnSignInSignUp" class="btn btn-danger btn-large">SignIn or SignUp</button>
+            <button id="btnSignOut" class="btn btn-danger btn-large" style="display:none">SignOut</button>
         </div>
+    </div>
+    
+    @*background*@
+    <div id="backgroundImg">
+        <img src="~/CSS/calenderIMG.jpg" alt="calender" class="img-fluid"/>
     </div>
 
     @*<div class="row">*@
-        <div class="col-xs-12 ">
+        <div class="col-xs-12 " id="tab">
             <nav>
                 <div class="nav nav-tabs nav-fill" id="nav-tab" role="tablist">
                     <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Home</a>
                     <a class="nav-item nav-link" id="Create" data-toggle="tab" href="#nav-create" role="tab" aria-controls="nav-create" aria-selected="false">create</a>
                     <a class="nav-item nav-link" id="nav-listView-tab" data-toggle="tab" href="#nav-listView" role="tab" aria-controls="nav-listView" aria-selected="false">ListView</a>
                     <a class="nav-item nav-link" id="nav-calenderView-tab" data-toggle="tab" href="#nav-calenderView" role="tab" aria-controls="nav-calenderView" aria-selected="false">CalenderView</a>
+                    <a class="nav-item nav-link" id="Views-tab" data-toggle="dropdown" href="#nav-Views" role="tab" aria-controls="nav-Views" aria-selected="false">Views</a>
+
+                    
+                    <div class="dropdown-menu dropdown-menu-center">
+                        <a class="dropdown-item" href="#tab1" data-toggle="tab">Calender tab</a>
+                        <a class="dropdown-item" href="#tab2" data-toggle="tab">List tab</a>                        
+                    </div>
                 </div>
             </nav>
             <div class="tab-content py-3 px-3 px-sm-0" id="nav-tabContent">
 
                 <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
-                    Et et consectetur ipsum labore excepteur est proident excepteur ad velit occaecat qui minim occaecat veniam. Fugiat veniam incididunt anim aliqua enim pariatur veniam sunt est aute sit dolor anim. Velit non irure adipisicing aliqua ullamco irure incididunt irure non esse consectetur nostrud minim non minim occaecat. Amet duis do nisi duis veniam non est eiusmod tempor incididunt tempor dolor ipsum in qui sit. Exercitation mollit sit culpa nisi culpa non adipisicing reprehenderit do dolore. Duis reprehenderit occaecat anim ullamco ad duis occaecat ex.
+                    
                 </div>
 
-
-
+                               
                 @*create*@
                 <div class="tab-pane fade" id="nav-create" role="tabpanel" aria-labelledby="nav-create-tab">
-                    <div class="container register-form">
 
+                    <div class="container register-form" id="createForm">
                         <form name="studentForm" method=post>
                             <div class="form-content">
 
-                                @*<input type="hidden" class="form-control" name="UserId" />
-                                <div class="row form-group">
-                                    <div class="col-md-3">
-                                        <label></label>
-                                    </div>
-                                    <div class="col-md-9">
-                                        <input type="hidden" class="form-control" name="EventId" />
-                                    </div>
-                                </div>*@
+                                <input type="hidden" class="form-control" name="UserId" id="UserId" />
+                                <input type="hidden" class="form-control" name="EventId" id="EventId" />
 
                                 <div class="row form-group">
                                     <div class="col-md-3">
@@ -312,7 +107,7 @@
                                         <label>Description:</label>
                                     </div>
                                     <div class="col-md-9">
-                                        <textarea class="form-control" cols="40" rows="5" placeholder="Description " name="Description" ></textarea>
+                                        <textarea class="form-control" cols="40" rows="5" placeholder="Description" name="Description" id="Description"></textarea>
                                     </div>
                                 </div>
 
@@ -336,15 +131,33 @@
                                     </div>
                                 </div>
 
-                                <button type="submit" class="btnSubmit" id="btnSubmitCreate">Submit</button>
+                                <button type="button" class="btnSubmit" id="btnSubmitCreate">Submit</button>
                             </div>
                         </form>
                     </div>
                 </div>@*create--end*@
 
+
+                @*listView*@
                 <div class="tab-pane fade" id="nav-listView" role="tabpanel" aria-labelledby="nav-listView-tab">
-                    Et et consectetur ipsum labore excepteur est proident excepteur ad velit occaecat qui minim occaecat veniam. Fugiat veniam incididunt anim aliqua enim pariatur veniam sunt est aute sit dolor anim. Velit non irure adipisicing aliqua ullamco irure incididunt irure non esse consectetur nostrud minim non minim occaecat. Amet duis do nisi duis veniam non est eiusmod tempor incididunt tempor dolor ipsum in qui sit. Exercitation mollit sit culpa nisi culpa non adipisicing reprehenderit do dolore. Duis reprehenderit occaecat anim ullamco ad duis occaecat ex.
-                </div>
+                    <div class="container" id="eventLists">
+
+                        <table class="table" id="tblEventList">
+                            <thead>
+                                <tr>
+                                    <th>No.</th>
+                                    <th> EventId</th>
+                                    <th>EventName</th>
+                                    <th>Description</th>
+                                    <th>StartDate</th>
+                                    <th>EndDate</th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody></tbody>
+                        </table>
+                    </div>
+                </div> @*listView--end*@
 
 
                 @*calenderView*@
@@ -361,10 +174,10 @@
                                 </div>
 
                                 <div class="modal-body">
-                                    <button id="btnDelete" class="btn btn-default btn-sm pull-right">
+                                    <button type="button" id="btnDelete" class="btn btn-info btn-sm float-right">
                                         <span class="glyphicon glyphicon-remove"></span> Remove
                                     </button>
-                                    <button id="btnEdit" class="btn btn-default btn-sm pull-right" style="margin-right:5px;">
+                                    <button id="btnEdit" class="btn btn-info btn-sm float-right" style="margin-right:5px;">
                                         <span class="glyphicon glyphicon-pencil"></span> Edit
                                     </button>
 
@@ -399,7 +212,7 @@
                                             <label>Subject</label>
                                             <input type="text" id="txtSubject" class="form-control" />
                                         </div>
-                                        
+
                                         <div class="form-group">
                                             <label>Start</label>
                                             <input type="text" id="txtStart" class="form-control" />
