Added delete in event list

--- a/EventReminderApp2/Views/User/UserHome.cshtml
+++ b/EventReminderApp2/Views/User/UserHome.cshtml
@@ -299,13 +299,61 @@
     @*end--Login modal*@
 
 
-    @*List Update modal*@
+    @*Event List Update modal*@
     <div class="modal" id="ModalListUpdate">
         <div class="modal-dialog">
             <div class="modal-content">
 
                 <div class="modal-body">
+                    <div class="container register-form" id="updateListForm">
+                        <form name="UpdateForm" method=post>
+                            <div class="form-content">
+                                <p>hello</p>
+                                @*<input type="hidden" class="form-control" name="UserIdList" id="UserIdList" />
+                                <input type="hidden" class="form-control" name="EventIdList" id="EventIdList" />
 
+                                <div class="row form-group">
+                                    <div class="col-md-3">
+                                        <label>Event Name:</label>
+                                    </div>
+                                    <div class="col-md-9">
+                                        <input type="text" class="form-control" placeholder="Event Name" name="EventNameList" id="EventNameList" required />
+                                    </div>
+                                </div>
+
+                                <div class="row form-group">
+                                    <div class="col-md-3">
+                                        <label>Description:</label>
+                                    </div>
+                                    <div class="col-md-9">
+                                        <textarea class="form-control" cols="40" rows="5" placeholder="Description" name="DescriptionList" id="DescriptionList"></textarea>
+                                    </div>
+                                </div>
+
+                                <div class="row form-group">
+                                    <div class="col-md-3">
+                                        <label>Start Date:</label>
+                                    </div>
+
+                                    <div class="col-md-9">
+                                        <input type="datetime-local" class="form-control" placeholder="MM-DD-YYYY" name="StartDateList" id="StartDateList" required />
+                                    </div>
+                                </div>
+
+                                <div class="row form-group">
+                                    <div class="col-md-3">
+                                        <label>End Date:</label>
+                                    </div>
+
+                                    <div class="col-md-9">
+                                        <input type="datetime-local" class="form-control" placeholder="MM-DD-YYYY" name="EndDateList" id="EndDateList" required />
+                                    </div>
+                                </div>
+
+                                <button type="button" class="btnSubmit" id="btnUpdateList">Update</button>*@
+                            </div>
+                        </form>
+                    </div>
                 </div>
 
             </div>
