--- a/EventReminderApp2/CSS/Home.css
+++ b/EventReminderApp2/CSS/Home.css
@@ -40,7 +40,7 @@
 
 .pContainer {
     float: left;
-    margin-left:44%;
+    margin-left:42%;
 }
 
 .btnContainer {
@@ -48,11 +48,8 @@
     margin-right:20px;
 }
 
-/*#backgroundImg {
-    width:100%;
-    height:700px;
-    background-image: url('calenderIMG.jpg');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: 100% 100%;
-}*/
+#currentUser {
+    float: left;
+    margin-left: 5px;
+    width: auto;
+}
