--- a/EventReminderApp2/Views/User/UserHome.cshtml
+++ b/EventReminderApp2/Views/User/UserHome.cshtml
@@ -29,9 +29,7 @@
     <link href="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.4.0/fullcalendar.print.css" rel="stylesheet" media="print" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.4.0/fullcalendar.min.js"></script>
-
-    @*<link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />*@
-
+   
     @*//google api*@
     <script src="https://apis.google.com/js/platform.js" async defer></script>
 
@@ -365,6 +363,34 @@
         </div>
     </div>
     @*List update modal --end*@
+
+    @*User details modal popup*@
+    <div class="modal" id="ModalUserDetails">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Update User Details</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form class="form-User">
+                        <input type="hidden" class="form-control" name="uId" id="uId" />
+                        <div class="form-group">
+                            <label>User Name:</label>
+                            <input type="text" id="uName" class="form-control" placeholder="Username" name="uName" required autofocus="">
+                        </div>
+                        <div class="form-group">
+                            <label>Email:</label>
+                            <input type="email" id="uEmail" class="form-control" placeholder="Email address" name="uEmail" required autofocus="">
+                        </div>
+                        <div class="input-group">
+                            <button type="button" class="btn btn-md btn-block submit" id="btnEditUserDetails">Update</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>@*end---User details modal popup*@
 
     <div class="footer">
         <p>Copyright &copy; 2020 Lekshmi Raj M R</p>
